# LIVO_Planner_ROS2

./: .gitignore  README.md
docs/: compilereq.md  example.md  real2sim.md  ros2_migration_guide.md  scan_planner_compiled.md  scan_simulator.md  super-migration-errors.md
docs/superpowers/specs/: 2026-07-15-super-humble-migration-design.md
launch/: ego_planner_sim.launch.py
src/: ground_filter.py
src/Ego-Planner-2D-ROS2/: CMakeLists.txt  package.xml
src/Ego-Planner-2D-ROS2/include/: trajectory_obstacles_publisher.h
src/Ego-Planner-2D-ROS2/planner/bspline_opt/src/: bspline_optimizer.cpp
src/Ego-Planner-2D-ROS2/planner/plan_manage/include/plan_manage/: planner_interface.h
src/Ego-Planner-2D-ROS2/planner/plan_manage/src/: planner_interface.cpp
src/Ego-Planner-2D-ROS2/rviz/: ego_planner.rviz
src/Ego-Planner-2D-ROS2/src/: trajectory_publisher.cpp
src/SCAN-Planner/rviz/: example.rviz  fastlio_scan.rviz
src/SCAN-Planner/src/planner/bspline_opt/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/bspline_opt/include/bspline_opt/: bspline_optimizer.h
src/SCAN-Planner/src/planner/bspline_opt/src/: bspline_optimizer.cpp
src/SCAN-Planner/src/planner/path_searching/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/path_searching/include/path_searching/: dyn_a_star.h
src/SCAN-Planner/src/planner/path_searching/src/: dyn_a_star.cpp
src/SCAN-Planner/src/planner/plan_env/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/plan_env/include/plan_env/: grid_map.h
src/SCAN-Planner/src/planner/plan_env/src/: grid_map.cpp
src/SCAN-Planner/src/planner/plan_manage/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/plan_manage/include/plan_manage/: planner_manager.h  scan_replan_fsm.h
src/SCAN-Planner/src/planner/plan_manage/launch/: run.launch.py  rviz.launch.py  simulator.launch.py
src/SCAN-Planner/src/planner/plan_manage/src/: closed_loop_controller.cpp  go2_gait_publisher.cpp  go2_kinematic_sim.cpp  open_loop_controller.cpp  planner_manager.cpp  scan_planner_node.cpp  scan_replan_fsm.cpp
src/SCAN-Planner/src/planner/scan_planner_msgs/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/traj_utils/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/planner/traj_utils/include/traj_utils/: planning_visualization.h
src/SCAN-Planner/src/planner/traj_utils/src/: planning_visualization.cpp
src/SCAN-Planner/src/simulator/Utils/go2_description/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/Utils/odom_visualization/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/Utils/odom_visualization/src/: odom_visualization.cpp
src/SCAN-Planner/src/simulator/Utils/pose_utils/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/Utils/waypoint_generator/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/Utils/waypoint_generator/src/: waypoint_generator.cpp
src/SCAN-Planner/src/simulator/local_sensing/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/local_sensing/src/: pointcloud_render_node.cpp
src/SCAN-Planner/src/simulator/map_generator/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/map_generator/src/: map_publisher.cpp
src/SCAN-Planner/src/simulator/mockamap/: CMakeLists.txt  package.xml
src/SCAN-Planner/src/simulator/mockamap/include/: maps.hpp
src/SCAN-Planner/src/simulator/mockamap/src/: maps.cpp  mockamap.cpp
