<?xml version="1.0"?>
<package format="3">
  <name>scan_planner</name>
  <version>0.0.0</version>
  <description>The scan_planner package</description>

  <maintainer email="iszhouxin@todo.todo">iszhouxin</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>cv_bridge</depend>
  <depend>plan_env</depend>
  <depend>path_searching</depend>
  <depend>bspline_opt</depend>
  <depend>traj_utils</depend>
  <depend>scan_planner_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
